Update UI attributes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/duck_image"
-        android:scaleType="fitStart"
-        android:layout_gravity="top"
+        android:scaleType="fitEnd"
+        android:layout_gravity="bottom"
         android:src="@drawable/duck" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|end"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
